--- a/src/docs/userguide/gradleWrapper.tex
+++ b/src/docs/userguide/gradleWrapper.tex
@@ -3,7 +3,7 @@
 \label{cha:the_gradle_wrapper}
 Gradle is a new tool. You can't expect it to be installed on machines beyond your sphere of influence. An example are continuous integration server where Gradle is not installed and you have no admin rights for the machine. Or what if you provide an open source project and you want to make it as easy as possible for your users to build it.
 
-There is a simple and good news. Gradle provides a solution for this. It ships with a \emph{Wrapper} task. You can create such a task in your build script.
+There is a simple and good news. Gradle provides a solution for this. It ships with a \emph{Wrapper} task.\footnote{Gradle itself is continuously built by Bamboo and Teamcity via this wrapper. See \url{http://gradle.org/ci-server.html}} You can create such a task in your build script.
 \begin{Verbatim}
 createTask('wrapper', type: Wrapper).configure {
     gradleVersion = '0.1'
@@ -31,7 +31,7 @@ The Wrapper task adds appropriate file permissions to allow the execution for th
 
 \section{Environment variable} % (fold)
 \label{sec:environment_variable}
-Some rather exotic use cases might occur when working with the Gradle Wrapper. For example the continuos integration server goes down during unzipping the Gradle distribution. As the distribution directory exists \texttt{gradlew} delegates to it but the distribution is corrupt. Or the zip-distribution was not properly downloaded. When you have no admin right for the continuous integration server to remove the corrupt files, Gradle offers a solution via environment variables.
+Some rather exotic use cases might occur when working with the Gradle Wrapper. For example the continuos integration server goes down during unzipping the Gradle distribution. As the distribution directory exists \texttt{gradlew} delegates to it but the distribution is corrupt. Or the zip-distribution was not properly downloaded. When you have no admin right on the continuous integration server to remove the corrupt files, Gradle offers a solution via environment variables.
 
 \begin{tabularx}{\textwidth}{cX} 
 	\textbf{Variable Name} & \centerline{\textbf{Meaning}}\\
