--- a/src/docs/userguide/introduction.tex
+++ b/src/docs/userguide/introduction.tex
@@ -5,15 +5,10 @@ We would like to introduce Gradle to you, a build system that we think is a quan
 	\item a very flexible general purpose build tool like Ant.
     \item switchable, build-by-convention frameworks a la Maven. But we never lock you in!
     \item a very powerful support for multi-project builds.
-    \item a very powerful dependency management (based on Ivy). 
-    \item supports fully your existing Maven or Ivy repository infrastructure.
-	\item Optionally Gradle provides you complete transitive dependency management without the need for remote repositories or providing a \texttt{pom.xml} or \texttt{ivy.xml}.
-    \item Ant tasks are first class citizens.
-    \item The build scripts are \emph{Groovy}. 
+    \item a very powerful dependency management (based on Apache Ivy). 
+    \item full support for your existing Maven or Ivy repository infrastructure.
+	\item (optionally) support for transitive dependency management without the need for remote repositories or \texttt{pom.xml} and \texttt{ivy.xml} files.
+    \item Ant tasks as first class citizens.
+    \item \emph{Groovy} build scripts. 
 \end{itemize}
 In chapter \ref{cha:overview} you find a detailed overview of Gradle. Now the tutorials are waiting, have fun :)
-
-
-
-    
-
