--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -87,6 +87,6 @@
 \include{potentialTraps} 
 \include{ideSupport} 
 \include{commandLine} 
-\include{mavenPoms} 
+% \include{mavenPoms} 
 
 \end{document}
