--- a/src/docs/userguide/buildscripts.tex
+++ b/src/docs/userguide/buildscripts.tex
@@ -6,7 +6,7 @@ If you execute a build, Gradle normally looks for a file called \texttt{gradlefi
 \section{Hello World}
 In Gradle everything revolves around tasks. The tasks for your build are defined in the build script. To try this out, create the following build script named \texttt{gradlefile} and enter with your shell into the containing directory.
 \codeInput{../../../build/distributions/exploded/samples/tutorial/hellofile} 
-Now execute the build script\footnote{Every code sample in this chapter can be found in the \texttt{samples} dir of your Gradle distribution. The output box always denotes the directory name relative to the \texttt{samples} dir.}:
+Now execute the build script\footnote{Every code sample in this chapter can be found in the \texttt{samples} dir of your Gradle distribution. The output box always denotes the directory name relative to the \texttt{samples} dir.}\footnote{As all scripts of this tutorial reside in one directory, they can't use the default name \texttt{gradlefile}. Therefore those scripts are executed with the \texttt{-b} option to specify a different name for the build script file. The scripts are also executed with the \texttt{-q} options which suppresses the Gradle logging.}:
 \outputInputTutorial{../../../build/tutorial-output/hellofile.out} 
 If you think this looks damn similar to Ant's targets, well, you are right. Gradle tasks are the equivalent to Ant targets. But as you will see, they are much more powerful. We have used a different terminology to Ant as we think the word 'task' is more expressive than the word 'target'. Unfortunately this introduces a terminology clash with Ant, as Ant calls its commands, like \texttt{javac} or \texttt{copy}, task. So if we talk about tasks, we \textbf{always} mean Gradle tasks, which are the equivalent to Ant's targets. If we talk about Ant tasks (Ant commands), we explicitly say \textbf{ant} task.
 
