Improved userguide (applied the patches of David Freels)
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@410 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/buildscripts.tex
+++ b/src/docs/userguide/buildscripts.tex
@@ -56,7 +56,7 @@ The second layer of Ant is its wealth of Ant tasks and types, like \texttt{javac
 In your build script, a property called \texttt{ant} is provided by Gradle. It is a reference to an instance of Groovys AntBuilder. The AntBuilder is used the following way:
 \begin{itemize}
 \item Ant task names corresponds to AntBuilder method names.
-\item Ant tasks attributes are arguments for this methods. The arguments are apssed in form of a map.
+\item Ant tasks attributes are arguments for this methods. The arguments are passed in from of a map.
 \item Nested Ant tasks corresponds to method calls of the passed closure.
 \end{itemize}
 To learn more about the Ant Builder have a look in GINA 8.4 or at the Groovy Wiki
